Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
I'm writing bindings between the C++ write CSV functionality and R. When I test my code on a table with no dates columns, the tests pass, but when I test the code with a table that includes dates, I get the following error message:
`Error: NotImplemented: Unsupported cast from date32[day] to utf8 using function cast_string`
Code that causes error: https://github.com/apache/arrow/pull/10141
Attachments
Issue Links
- is related to
-
ARROW-11787 [R] Implement write csv
-
- Resolved
-
-
ARROW-14231 [C++] Can't cast from timestamp to utf8 when saving CSV
-
- Resolved
-
- links to