ARROW-12540: [C++] Implementing casting support from date32/date64 to uft8/large_utf8

Changes:
- Implemented casting support from date32/date64 to uft8/large_utf8
- Added unit tests for converting from date32/date64 to uft8/large_utf8.

Closes #10870 from rommelDB/12540-implement-cast-from-date-to-string

Authored-by: Rommel Quintanilla <rommel.quintanilla.c@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>